--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>hema kumar.pPortfolio</title>
+  <title>hema kumar.p Portfolio</title>
   <style>
     * {
       margin: 0;
@@ -203,7 +203,7 @@
     <h1>hema Kumar.p</h1>
     
   </div>
-  <p>assistant professor </p>
+  <p>UG student </p>
   <input type="file" id="fileInput" accept="image/*" style="display:none">
   <button onclick="showModal()">Change Profile</button>
 </header>
@@ -260,7 +260,7 @@
 
 <section id="contact">
   <h2>Contact</h2>
-  <p>Email: <a href="hemkumarh895@gmail.com">shyamalakavisha@gmail.com</a></p>
+  <p>Email: <a href="hemkumarh895@gmail.com">hemkumarh895@gmail.com</a></p>
   <p>Phone: +91-8122425806</p>
   <p>Location: Chennai, India</p>
 </section>
@@ -286,7 +286,7 @@
   </div>
 </section>
 <footer>
-  <p>&copy; 2025 hema Kumar. All rights reserved.</p>
+  <p>&copy; 2025 hema Kumar.p All rights reserved.</p>
 </footer>
 
 <div class="modal" id="passwordModal">
